Fix hide site title on mobile

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -18,7 +18,7 @@ $sidebar-width: 260px;
     transition: opacity ease-out 0.4s;
 }
 
-@include breakpoint($small) {
+@include breakpoint(max-width $small) {
     .wrapper.is--pushed {
         .site-title {
             opacity: 0;
